--- a/instructors.qmd
+++ b/instructors.qmd
@@ -15,8 +15,8 @@ title: "Instructors"
 
 ### Office Hours
 
-- __Wednesdays 2:50-3:50 pm__  
-In classroom
+- __Wednesdays 2:50-3:30 pm__  
+VPT 660E
 - __Fridays 3:30-4:30 pm__  
 Virtual (link on Sakai)
 
