--- a/weeks/week_01.qmd
+++ b/weeks/week_01.qmd
@@ -34,7 +34,8 @@ Intro to R & RStudio
 
 ## Homework - coming soon!
 
-<!-- * [HW 1](../homework/HW_1_F24_bsta511.qmd) due on Sat, 10/7 -->
+* [HW 1](../homework/HW_1_F24_bsta511.qmd) due on Sat, 10/12
+    * Covers Days 1-3
 
 ## Recordings
 
