--- a/weeks/week_02.qmd
+++ b/weeks/week_02.qmd
@@ -92,17 +92,8 @@ Please look over the following topics. We will be discussing these in class.
 | Probability (Book sections 2.1.1-2.1.6) | Day 4: slides 1-4 | [Day 4 Part 1](https://echo360.org/lesson/c0bf6a6b-2b1e-49bb-8703-24694b96c327/classroom#sortDirection=desc) | 23 min |
 | Probability (Book sections 2.1.7-2.2.4) | Day 4: slides 5-9 | [Day 4 Part 2](https://echo360.org/lesson/1aee54b7-8fa0-430a-a938-06b0bd9772c3/classroom#sortDirection=desc) | 24 min |
 
-## Homework - coming soon!
+## Homework 
 
-<!-- * [HW 1](../homework/HW_1_F24_bsta511.qmd) due on Sat, 10/7 -->
-<!--     * Covers Days 1-2 -->
-<!-- * [HW 2](../homework/HW_2_F24_bsta511.qmd) due on Sat, 10/14 -->
-<!--     * Covers Days 3-5 -->
-<!-- * HW 3 due on Sat, 10/21 -->
-<!--     * Covers Days 6-7 -->
-
-<!-- ### Why is `{.unnumbered}` included at the end of some of the section headers on the HW? -->
-
-<!-- * I added the option for the sections to be numbered in the YAML (`number-sections: true`) so that the R exercises at the end of the file are numbered.  -->
-<!-- * However, the book exercises already have their own numbering, and so I added `{.unnumbered}` to the section headers of the book exercises so that they are not numbered twice.  -->
+* [HW 1](../homework/HW_1_F24_bsta511.qmd) due on Sat, 10/12
+    * Covers Days 1-3
 
