--- a/weeks/week_02.qmd
+++ b/weeks/week_02.qmd
@@ -12,88 +12,60 @@ editor_options:
   chunk_output_type: console
 ---
 
+## Overview of Week 2
+
+### Day02
+
+-   Data Collection Principles & Intro to Data (**Fall 2023: Day 2**)
+    -   Book sections 1.1-1.3
+
+### Day03
+
+-   Summarizing Numerical Data (**Fall 2023: Day 2**)
+    -   Book section 1.4
+-   Probability (**Fall 2023: Day 4**)
+    -   Sections 2.1 - 2.2.4
+
+## Slides & Recordings
+
+-   **Pre-recorded** lessons are on [Echo Cloud](https://echo360.org/section/4a58d645-5753-4e4f-b962-f8825f59baba/home) (aka echo 360 or echo video).
+
+| Day | Topic | Slides (F23): html | Slides: pdf | Slides: web-page | Slides with notes | Recording Link (F23) | Duration | Code: qmd | Code: html |
+|-----|-------------|----------|-----|-----|-----|--------------|---------|-----|-----|
+| 2 | Data Collection Principles (Book section 1.3) | [Day 2: slides 1-17](../slides/Day02_bsta511.qmd) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](https://drive.google.com/file/d/1I59wEibQe1sXi5urIkYEv-lW1NHU6zzC/view?usp=sharing) | [{{< iconify streamline web size=20px >}}](../slides_md/Day02_bsta511_md.qmd) |  | [Day 2 Part 1](https://echo360.org/lesson/1333352e-8aed-40cc-ac47-c3e67b0b8416/classroom#sortDirection=desc) | 33 min | [{{< iconify simple-icons:quarto >}}](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day02_bsta511_code.qmd) | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day02_bsta511_code.qmd) |
+|  | Intro to Data (Book section 1.2) | [Day 2: slides 18-32](../slides/Day02_bsta511.qmd#/intro-to-data---day-2-in-f24) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](https://drive.google.com/file/d/1I59wEibQe1sXi5urIkYEv-lW1NHU6zzC/view?usp=sharing) | [{{< iconify streamline web size=20px >}}](../slides_md/Day02_bsta511_md.qmd#/intro-to-data---day-2-in-f24) |  | [Day 2 Part 2](https://echo360.org/lesson/f76d1578-dc8d-4f9a-9f2b-b8533c8b3265/classroom#sortDirection=desc) | 42 min | [{{< iconify simple-icons:quarto >}}](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day02_bsta511_code.qmd) | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day02_bsta511_code.qmd) |
+| 3 | Summarizing Numerical Data (Book section 1.4) | [Day 2: slides 33-46](../slides/Day02_bsta511.qmd#/summarizing-numerical-data---day-3-in-f24) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](https://drive.google.com/file/d/1I59wEibQe1sXi5urIkYEv-lW1NHU6zzC/view?usp=sharing) | [{{< iconify streamline web size=20px >}}](../slides_md/Day02_bsta511_md.qmd#summarizing-numerical-data---day-3-in-f24) |  | [Day 2 Part 3](https://echo360.org/lesson/41eeabd2-d1f3-415e-b6e8-5761595b2b65/classroom#sortDirection=desc) | 37 min | [{{< iconify simple-icons:quarto >}}](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day02_bsta511_code.qmd) | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day02_bsta511_code.qmd) |
+|  | Probability (Book sections 2.1.1-2.1.6) | [Day 4: slides 1-4](../slides/Day04_bsta511.qmd) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](../LaTeX_slides/Day04_bsta511.pdf) |  | [{{< iconify pepicons-pop pen-circle-filled size=20px >}}](https://drive.google.com/file/d/1Iq9v4wEQOpeWDH5PGXpspoC5RBB9WBui/view?usp=sharing) | [Day 4 Part 1](https://echo360.org/lesson/c0bf6a6b-2b1e-49bb-8703-24694b96c327/classroom#sortDirection=desc) | 23 min |  |  |
+|  | Probability (Book sections 2.1.7-2.2.4) | [Day 4: slides 5-9](../slides/Day04_bsta511.qmd) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](../LaTeX_slides/Day04_bsta511.pdf) |  | [{{< iconify pepicons-pop pen-circle-filled size=20px >}}](https://drive.google.com/file/d/1Iq9v4wEQOpeWDH5PGXpspoC5RBB9WBui/view?usp=sharing) | [Day 4 Part 2](https://echo360.org/lesson/1aee54b7-8fa0-430a-a938-06b0bd9772c3/classroom#sortDirection=desc) | 24 min |  |  |
+
+: {.striped .hover tbl-colwidths="\[3, 10, 8, 5, 5, 5, 6, 6, 5, 5\]"}
 
 
-## Day02 
+## Class discussion
 
-* Data Collection Principles & Intro to Data
-    * Book sections 1.1-1.3
+### Day02
 
-### Slides
+During class you will be working in groups discussing the following:
 
-__[Fall 2023: Day 2 Slides 1-32]{style="color:darkorange"}__
+-   From HW 1
+    -   Book problems: 1.8, 1.12, 1.20, 1.31
+    -   R2: BRFSS - parts a)-b)
+    -   Book problems: 2.6,2.14
 
-* [html](../slides/Day02_bsta511.qmd) 
-* [pdf](https://drive.google.com/file/d/1I59wEibQe1sXi5urIkYEv-lW1NHU6zzC/view?usp=sharing)
-* [webpage](../slides_md/Day02_bsta511_md.qmd)
-* Code file: [qmd](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day02_bsta511_code.qmd), [html](../slides_code/Day02_bsta511_code.qmd)
+### Day03
 
+-   Summarizing Numerical Data (**Fall 2023: Day 2**)
+    -   Slide 46: **Robust estimates**
+    -   From HW 1
+        -   Book problem: 1.31
+        -   R2: BRFSS - parts c)-e)
+-   Probability (**Fall 2023: Day 4**)
+    -   Example 2.3 on pg 4 of slides
+    -   Example 2.6 on pgs 8-9 of slides
+    -   From HW 1
+        -   Book problems: 2.6,2.14
 
+## Homework
 
-### Class discussion (still updating)
-
-Please look over the following topics. We will be discussing these in class. 
-
-* From HW 1 
-    * Book problems: 1.8, 1.20
-
-
-### Recordings
-
-* __Pre-recorded__ lessons are on [Echo Cloud](https://echo360.org/section/4a58d645-5753-4e4f-b962-f8825f59baba/home) (aka echo 360 or echo video).
-
-
-| Topic | Slides (F23) | Recording Link (F23) | Duration |
-|----------------------|---------------------|----------------|----------|
-| Data Collection Principles (Book section 1.3) | Day 2: slides 1-17 | [Day 2 Part 1](https://echo360.org/lesson/1333352e-8aed-40cc-ac47-c3e67b0b8416/classroom#sortDirection=desc) | 33 min |
-| Intro to Data (Book section 1.2) | Day 2: slides 18-32 | [Day 2 Part 2](https://echo360.org/lesson/f76d1578-dc8d-4f9a-9f2b-b8533c8b3265/classroom#sortDirection=desc) | 42 min |
-
-
-
-## Day03 
-
-* Summarizing Numerical Data  (__Fall 2023: Day 2__)
-    * Book section 1.4
-* Probability  (__Fall 2023: Day 4__)
-    * Sections 2.1 - 2.2.4
-
-### Slides
-
-* Summarizing Numerical Data  (__Fall 2023: Day 2__)
-    * __[Fall 2023: Day 2 Slides 33-46]{style="color:darkorange"}__
-    * [html](../slides/Day02_bsta511.qmd) 
-    * [pdf](https://drive.google.com/file/d/1I59wEibQe1sXi5urIkYEv-lW1NHU6zzC/view?usp=sharing)
-    * [webpage](../slides_md/Day02_bsta511_md.qmd)
-    * Code file: [qmd](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day02_bsta511_code.qmd), [html](../slides_code/Day02_bsta511_code.qmd)
-
-
-* Probability  (__Fall 2023: Day 4__)
-    * [html](../slides/Day04_bsta511.qmd)
-    * [pdf](../LaTeX_slides/Day04_bsta511.pdf)
-    * Slides with [notes](https://drive.google.com/file/d/1Iq9v4wEQOpeWDH5PGXpspoC5RBB9WBui/view?usp=sharing)
-
-
-### Class discussion (still updating)
-
-* Summarizing Numerical Data  (__Fall 2023: Day 2__)
-    * Slide 45: __Robust estimates__
-    * From HW 1 
-        * Book problem: 1.31
-* Probability  (__Fall 2023: Day 4__)
-    * Example 2.3 on pg 4 of slides
-    * Example 2.6 on pgs 8-9 of slides
-
-
-### Recordings
-
-| Topic | Slides (F23) | Recording Link (F23) | Duration |
-|----------------------|---------------------|----------------|----------|
-| Summarizing Numerical Data (Book section 1.4) | Day 2: slides 33-46 | [Day 2 Part 3](https://echo360.org/lesson/41eeabd2-d1f3-415e-b6e8-5761595b2b65/classroom#sortDirection=desc) | 37 min |
-| Probability (Book sections 2.1.1-2.1.6) | Day 4: slides 1-4 | [Day 4 Part 1](https://echo360.org/lesson/c0bf6a6b-2b1e-49bb-8703-24694b96c327/classroom#sortDirection=desc) | 23 min |
-| Probability (Book sections 2.1.7-2.2.4) | Day 4: slides 5-9 | [Day 4 Part 2](https://echo360.org/lesson/1aee54b7-8fa0-430a-a938-06b0bd9772c3/classroom#sortDirection=desc) | 24 min |
-
-## Homework 
-
-* [HW 1](../homework/HW_1_F24_bsta511.qmd) due on Sat, 10/12
-    * Covers Days 1-3
-
+-   [HW 1](../homework/HW_1_F24_bsta511.qmd) due on Sat, 10/12
+    -   Covers Days 1-3
