--- a/weeks/week_02.qmd
+++ b/weeks/week_02.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Week 2"
-description: "Data collection & EDA"
+description: "Data collection & Probability"
 date: "10/7/2024"
 date-modified: "today"
 categories: [""]
@@ -14,35 +14,30 @@ editor_options:
 
 ## Overview of Week 2
 
-::: grid
+::::: grid
 ::: g-col-6
-### Day02
+### Day 2
 
 -   Data Collection Principles & Intro to Data (**Fall 2023: Day 2**)
     -   Book sections 1.1-1.3
 :::
 
 ::: g-col-6
-### Day03
+### Day 3
 
 -   Summarizing Numerical Data (**Fall 2023: Day 2**)
     -   Book section 1.4
 -   Probability (**Fall 2023: Day 4**)
     -   Sections 2.1 - 2.2.4
 :::
-:::
-
-
-
-
-
+:::::
 
 ## Slides & Recordings
 
 -   **Pre-recorded** lessons are on [Echo Cloud](https://echo360.org/section/4a58d645-5753-4e4f-b962-f8825f59baba/home) (aka echo 360 or echo video).
 
 | Day | Topic | Slides (F23): html | Slides: pdf | Slides: web-page | Slides with notes | Recording Link (F23) | Duration | Code: qmd | Code: html |
-|-----|-------------|----------|-----|-----|-----|--------------|---------|-----|-----|
+|--------|--------|--------|--------|--------|--------|--------|--------|--------|--------|
 | 2 | Data Collection Principles (Book section 1.3) | [Day 2: slides 1-17](../slides/Day02_bsta511.qmd) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](https://drive.google.com/file/d/1I59wEibQe1sXi5urIkYEv-lW1NHU6zzC/view?usp=sharing) | [{{< iconify streamline web size=20px >}}](../slides_md/Day02_bsta511_md.qmd) |  | [Day 2 Part 1](https://echo360.org/lesson/1333352e-8aed-40cc-ac47-c3e67b0b8416/classroom#sortDirection=desc) | 33 min | [{{< iconify simple-icons:quarto >}}](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day02_bsta511_code.qmd) | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day02_bsta511_code.qmd) |
 |  | Intro to Data (Book section 1.2) | [Day 2: slides 18-32](../slides/Day02_bsta511.qmd#/intro-to-data---day-2-in-f24) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](https://drive.google.com/file/d/1I59wEibQe1sXi5urIkYEv-lW1NHU6zzC/view?usp=sharing) | [{{< iconify streamline web size=20px >}}](../slides_md/Day02_bsta511_md.qmd#/intro-to-data---day-2-in-f24) |  | [Day 2 Part 2](https://echo360.org/lesson/f76d1578-dc8d-4f9a-9f2b-b8533c8b3265/classroom#sortDirection=desc) | 42 min | [{{< iconify simple-icons:quarto >}}](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day02_bsta511_code.qmd) | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day02_bsta511_code.qmd) |
 | 3 | Summarizing Numerical Data (Book section 1.4) | [Day 2: slides 33-46](../slides/Day02_bsta511.qmd#/summarizing-numerical-data---day-3-in-f24) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](https://drive.google.com/file/d/1I59wEibQe1sXi5urIkYEv-lW1NHU6zzC/view?usp=sharing) | [{{< iconify streamline web size=20px >}}](../slides_md/Day02_bsta511_md.qmd#summarizing-numerical-data---day-3-in-f24) |  | [Day 2 Part 3](https://echo360.org/lesson/41eeabd2-d1f3-415e-b6e8-5761595b2b65/classroom#sortDirection=desc) | 37 min | [{{< iconify simple-icons:quarto >}}](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day02_bsta511_code.qmd) | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day02_bsta511_code.qmd) |
@@ -50,7 +45,6 @@ editor_options:
 |  | Probability (Book sections 2.1.7-2.2.4) | [Day 4: slides 5-9](../slides/Day04_bsta511.qmd) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](../LaTeX_slides/Day04_bsta511.pdf) |  | [{{< iconify pepicons-pop pen-circle-filled size=20px >}}](https://drive.google.com/file/d/1Iq9v4wEQOpeWDH5PGXpspoC5RBB9WBui/view?usp=sharing) | [Day 4 Part 2](https://echo360.org/lesson/1aee54b7-8fa0-430a-a938-06b0bd9772c3/classroom#sortDirection=desc) | 24 min |  |  |
 
 : {.striped .hover tbl-colwidths="\[3, 10, 8, 5, 5, 5, 6, 6, 5, 5\]"}
-
 
 ## Class discussion
 
