--- a/weeks/week_03.qmd
+++ b/weeks/week_03.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Week 3"
-description: "Probability"
+description: "Bayes' Rule & EDA"
 date: "10/14/2024"
 date-modified: "today"
 categories: [""]
@@ -12,84 +12,76 @@ editor_options:
   chunk_output_type: console
 ---
 
+## Overview of Week 3
 
+### Day 4
 
-## Day04    
+-   Bayes' Rule (**Fall 2023: Day 5**)
+    -   Section 2.2.5
+-   R Packages (**Fall 2023: Day 2**)
 
-* Bayes' Rule (__Fall 2023: Day 5__)
-* R Packages (__Fall 2023: Day 2__)
+### Day 5
 
-### Slides
+**Fall 2023: Day 3**
 
+-   Data visualization, exploratory data analysis (EDA), and summarizing categorical data
+    -   Sections 1.5-1.7 & supplementary material
 
-* Bayes' Rule (__Fall 2023: Day 5__)
-    * [html](../slides/Day05_bsta511.qmd)
-    * [pdf](../LaTeX_slides/Day05_bsta511.pdf)
-    * Slides with [notes](https://drive.google.com/file/d/1Is2JXTYLhp6e6Ia4dBF9SunrVgZhRkXQ/view?usp=sharing)
-* R Packages (__Fall 2023: Day 2__)
-    * __[Fall 2023: Day 2 Slides 47-54]{style="color:darkorange"}__
-    * [html](../slides/Day02_bsta511.qmd) 
-    * [pdf](https://drive.google.com/file/d/1I59wEibQe1sXi5urIkYEv-lW1NHU6zzC/view?usp=sharing)
-    * [webpage](../slides_md/Day02_bsta511_md.qmd)
-    * Code file: [qmd](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day02_bsta511_code.qmd), [html](../slides_code/Day02_bsta511_code.qmd)
-    
-
-### Class discussion (still updating)
-
-<!-- [Class discussion Google doc link](https://docs.google.com/document/d/1m_sOZWZHlnL89N60RyfdFG6wphcEpofLevd2kMc1wYc/edit?usp=sharing) -->
-
-* Bayes' Rule (__Fall 2023: Day 5__)
-    * Example 2.10 on pg 6 of slides
-    * Added in class: Textbook exercises 2.18 (from HW)
-
-* R Packages (__Fall 2023: Day 2__)
-    * R packages: any difficulty installing packages?
-
-
-### Recordings
-
-| Topic | Slides (F23) | Recording Link (F23) | Duration |
-|----------------------|---------------------|----------------|----------|
-| Bayes' Rule (Book section 2.2.5) | Day 5: slides 1-2 | [Day 5 Part 1](https://echo360.org/lesson/77ab7ace-a200-4455-ae0d-8fd0be3216ef/classroom#sortDirection=desc) | 22 min |
-| Bayes' Rule (Book section 2.2.5) | Day 5: slides 3-6 | [Day 5 Part 2](https://echo360.org/lesson/51a9cd82-0772-4254-b4bb-41bbeefcd062/classroom#sortDirection=desc) | 22 min |
-| R packages | Day 2: slides 47-54 | [Day 2 Part 4](https://echo360.org/lesson/9536c32e-4f83-492e-b12a-0afb73fbcd4a/classroom#sortDirection=desc) | 30 min |
-
-
-## Day05 
-
-__Fall 2023: Day 3__
-
-* Data visualization, exploratory data analysis (EDA), and summarizing categorical data
-* Sections 1.5-1.7 & supplementary material
-
-:::{.callout-note}
+::: callout-note
 As I mentioned in the recording, the various options in more complex figures I usually look up how to implement when I need them. I show them so that you are aware of some of the functionality and options one has in creating figures using the ggplot2 package. At the end of the slides, we cover how to create tables summarizing data, especially categorical data. This part has some very useful code and data wrangling in it.
 :::
 
+## Slides & Recordings
 
-### Slides
+-   **Pre-recorded** lessons are on [Echo Cloud](https://echo360.org/section/4a58d645-5753-4e4f-b962-f8825f59baba/home) (aka echo 360 or echo video).
 
-__Fall 2023: Day 3__
+| Day | Topic | Slides (F23): html | Slides: pdf | Slides: web-page | Slides with notes | Recording Link (F23) | Duration | Code: qmd | Code: html |
+|--------|--------|--------|--------|--------|--------|--------|--------|--------|--------|
+| 4 | Bayes' Rule (Book section 2.2.5) | [Day 5: slides 1-2](../slides/Day05_bsta511.qmd) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](../LaTeX_slides/Day05_bsta511.pdf) |  | [{{< iconify pepicons-pop pen-circle-filled size=20px >}}](../LaTeX_slides/Day05_bsta511_notes.pdf) | [Day 5 Part 1](https://echo360.org/lesson/77ab7ace-a200-4455-ae0d-8fd0be3216ef/classroom#sortDirection=desc) | 22 min |  |  |
+|  | Bayes' Rule (Book section 2.2.5) | [Day 5: slides 3-6](../slides/Day05_bsta511.qmd) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](../LaTeX_slides/Day05_bsta511.pdf) |  | [{{< iconify pepicons-pop pen-circle-filled size=20px >}}](../LaTeX_slides/Day05_bsta511_notes.pdf) | [Day 5 Part 2](https://echo360.org/lesson/51a9cd82-0772-4254-b4bb-41bbeefcd062/classroom#sortDirection=desc) | 22 min |  |  |
+|  | R packages | [Day 2: slides 47-54](../slides/Day02_bsta511.qmd#/r-packages---day-4-in-f24) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](../slides_pdf/Day02_bsta511.pdf) | [{{< iconify streamline web size=20px >}}](../slides_md/Day02_bsta511_md.qmd#r-packages---day-4-in-f24) |  | [Day 2 Part 4](https://echo360.org/lesson/9536c32e-4f83-492e-b12a-0afb73fbcd4a/classroom#sortDirection=desc) | 30 min | [{{< iconify simple-icons:quarto >}}](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day02_bsta511_code.qmd) | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day02_bsta511_code.qmd#r-packages---day-4-in-f24) |
+| 5 | Exploratory Data Analysis | [Day 3: slides 1-59](../slides/Day03_bsta511.qmd) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](../slides_pdf/Day03_bsta511.pdf) | [{{< iconify streamline web size=20px >}}](../slides_md/Day03_bsta511_md.qmd) |  | [Day 3](https://echo360.org/lesson/8ba30718-f090-4e31-ad77-85e449d70c85/classroom#sortDirection=desc) | 1 hr 18 min | [{{< iconify simple-icons:quarto >}}](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day03_bsta511_code.qmd) | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day03_bsta511_code.qmd) |
 
-* [html](../slides/Day03_bsta511.qmd)
-* [pdf](https://drive.google.com/file/d/1IdkNDrcdGWozHGMrk28B5PXjDx-_ylqo/view?usp=sharing)
-* [webpage](../slides_md/Day03_bsta511_md.qmd)
-* Code file: [qmd](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day03_bsta511_code.qmd), [html](../slides_code/Day03_bsta511_code.qmd)
+: {.striped .hover tbl-colwidths="\[3, 10, 8, 5, 5, 5, 6, 6, 5, 5\]"}
 
-### Class discussion (still updating)
 
-* Can distribution shape and sample size be determined from a boxplot? (see slide 30)
-* Is there evidence of ethnicity (Hispanic vs. White non-Hispanic) discrimination in DDS expenditures? Why or why not?
+
+## Class discussion 
+
+During class you will be working in groups discussing the following:
+
+<!-- [Class discussion Google doc link]() -->
+
+### Day04
+
+-   R Packages (**Fall 2023: Day 2**)
+    -   R packages: any difficulty installing packages?
+-   Bayes' Rule (**Fall 2023: Day 5**)
+    -   Example 2.10 on pg 6 of slides
+-   From HW 2
+    -   Book exercises
+        -   2.24
+    -   Non-book exercise
+
+### Day05
+
+-   Can distribution shape and sample size be determined from a boxplot? (see slide 30)
+-   Is there evidence of ethnicity (Hispanic vs. White non-Hispanic) discrimination in DDS expenditures? Why or why not?
+
+-   From HW 2
+    -   R1 & R2: NHANES - parts 1 & 2
 
 <!-- ### Part 2 slides -->
 
 <!-- The Day 3 Part 2 slides include extra EDA to examine further the question of whether there is evidence of ethnicity (Hispanic vs. White non-Hispanic) discrimination in DDS expenditures based on the data. -->
 
 <!-- * [html](../slides/Day03_bsta511_part2.qmd) -->
-<!-- * [pdf](https://drive.google.com/file/d/1IofJF8cXrEyfVokBOw0WOcQGuGfETvsu/view?usp=sharing) -->
-<!-- * [webpage](../slides_md/Day03_bsta511_md_part2.qmd) -->
-<!-- * Code file: [qmd](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day03_bsta511_code_part2.qmd), [html](../slides_code/Day03_bsta511_code_part2.qmd) -->
 
+<!-- * [pdf](https://drive.google.com/file/d/1IofJF8cXrEyfVokBOw0WOcQGuGfETvsu/view?usp=sharing) -->
+
+<!-- * [webpage](../slides_md/Day03_bsta511_md_part2.qmd) -->
+
+<!-- * Code file: [qmd](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day03_bsta511_code_part2.qmd), [html](../slides_code/Day03_bsta511_code_part2.qmd) -->
 
 <!-- ### Part 3 slides: Data Wrangling -->
 
@@ -98,29 +90,10 @@ __Fall 2023: Day 3__
 <!-- _HW 2 makes reference to some of the functions in these slides._ -->
 
 <!-- * [pdf](https://drive.google.com/file/d/1IfubP0ei-5jTIVs33dyoEqjMIY-Q8qBe/view?usp=sharing) -->
+
 <!-- * Code file: [qmd](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day03_bsta511_code_part3_data_wrangling.qmd), [html](../slides_code/Day03_bsta511_code_part3_data_wrangling.qmd) -->
 
+## Homework
 
-### Recordings
-
-| Topic | Slides (F23) | Recording Link (F23) | Duration |
-|----------------------|---------------------|----------------|----------|
-| Exploratory Data Analysis | Day 3: slides 1-59 | [Day 3](https://echo360.org/lesson/8ba30718-f090-4e31-ad77-85e449d70c85/classroom#sortDirection=desc) | 1 hr 18 min |
-
-
-
-
-## Homework - coming soon!
-
-<!-- * [HW 2](../homework/HW_2_F24_bsta511.qmd) due on Sat, 10/14 -->
-<!--     * Covers Days 3-5 -->
-<!-- * HW 3 due on Sat, 10/21 -->
-<!--     * Covers Days 6-7 -->
-
-<!-- ### Why is `{.unnumbered}` included at the end of some of the section headers on the HW? -->
-
-<!-- * I added the option for the sections to be numbered in the YAML (`number-sections: true`) so that the R exercises at the end of the file are numbered.  -->
-<!-- * However, the book exercises already have their own numbering, and so I added `{.unnumbered}` to the section headers of the book exercises so that they are not numbered twice.  -->
-
-
+* [HW 2](../homework/HW_2_F24_bsta511.qmd) due on Sat, 10/19
 
