Added Ted's Better Plots presentation to Wk 3

--- a/weeks/week_03.qmd
+++ b/weeks/week_03.qmd
@@ -26,6 +26,7 @@ editor_options:
 
 -   Data visualization, exploratory data analysis (EDA), and summarizing categorical data
     -   Sections 1.5-1.7 & supplementary material
+    - Bonus: Check out Ted Laderas's [Better Plots](https://better-plots.netlify.app/) presentation
 
 ::: callout-note
 As I mentioned in the recording, the various options in more complex figures I usually look up how to implement when I need them. I show them so that you are aware of some of the functionality and options one has in creating figures using the ggplot2 package. At the end of the slides, we cover how to create tables summarizing data, especially categorical data. This part has some very useful code and data wrangling in it.
