--- a/schedule.qmd
+++ b/schedule.qmd
@@ -22,7 +22,7 @@ editor_options:
 |                         | Sa 10/19|       | [HW 2 Due](homework/HW_2_F24_bsta511.qmd) (Days 4 - 5)                                        |                                        |
 |  [4](weeks/week_04.qmd) | M 10/21 | **6** | Random variables, <br> Binomial distribution                                                     | 3.1-3.2                                |
 |                         | W 10/23 | **7** | Normal and Poisson distributions                                                                 | 3.3-3.4                                |
-|                         | Sa 10/26|       | HW 3 Due (Days 6 - 7)                                                                            |                                        |
+|                         | Sa 10/26|       | [HW 3 Due](homework/HW_3_F24_bsta511.qmd) (Days 6 - 7)                                                                            |                                        |
 |  5                      | M 10/28 | **8** | Variability in estimates                                                                         | 4.1                                    |
 |                         | W 10/30 |       | **Exam 1: Days 1-7**                                                                             | **Ch 1, 2, 3.1-3.4**                   |
 |  6                      | M 11/4  | **9** | Confidence Intervals                                                                             | 4.2                                    |
