Week 7: updated links

--- a/weeks/week_07.qmd
+++ b/weeks/week_07.qmd
@@ -38,15 +38,16 @@ editor_options:
 
 | Day | Topic | Slides: html | Slides: pdf | Slides: web-page | Slides with notes | Recording Link | Duration | Code: qmd | Code: html |
 |--------|--------|--------|--------|--------|--------|--------|--------|--------|--------|
-| 11 | CI's for 1 mean: 4.2 | [Day 9: slides 1-12](../slides/Day09_bsta511.qmd) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](../slides_pdf/Day11_bsta511.pdf) | [{{< iconify streamline web size=20px >}}](../slides_md/Day09_bsta511_md.qmd) | [{{< iconify pepicons-pop pen-circle-filled size=20px >}}](../slides_notes/Day11_bsta511_2samp-t-test-notes.pdf) | [Day 9 Part 1](https://echo360.org/lesson/49845aaf-0a16-40ee-ad8f-9a0eed89561f/classroom#sortDirection=desc) | 17 min | [{{< iconify simple-icons:quarto >}}](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day09_bsta511_code.qmd) | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day09_bsta511_code.qmd) |
-|  | 4.2 con'td | [Day 9: slides 13-19](../slides/Day09_bsta511.qmd#/how-to-interpret-a-c-i-12) | same | [{{< iconify streamline web size=20px >}}](../slides_md/Day09_bsta511_md.qmd#how-to-interpret-a-c-i-12) | same | [Day 9 Part 2](https://echo360.org/lesson/0a8e8094-9093-4d7a-b627-d5b4093aa3d7/classroom#sortDirection=desc) | 17 min | same | same |
-|  | 4.2 con'td, 5.1.1, 5.1.2 (pgs. 238-242) | [Day 9: slides 20-23](../slides/Day09_bsta511.qmd#/calculating-the-c-i-for-the-population-mean-using-s) | same | [{{< iconify streamline web size=20px >}}](../slides_md/Day09_bsta511_md.qmd#calculating-the-c-i-for-the-population-mean-using-s) | same | [Day 9 Part 3](https://echo360.org/lesson/c6a7b108-10ce-401c-b9e8-712388f4e852/classroom#sortDirection=desc) | 14 min | same | same |
-| 12 | Hyp test 1 mean intro | [Day 10 Part 1: slides 1-13](../slides/Day10_part1_bsta511.qmd) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](../slides_pdf/Day12_bsta511.pdf) | [{{< iconify streamline web size=20px >}}](../slides_md/Day10_part1_bsta511_md.qmd) | [{{< iconify pepicons-pop pen-circle-filled size=20px >}}](../slides_notes/Day12_bsta511_notes.pdf) | [Day 10 Part 1](https://echo360.org/lesson/68afabcf-82d3-4de6-8bab-1ff39f1b18fd/classroom#sortDirection=desc) | 26 min | [{{< iconify simple-icons:quarto >}}](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day10_part1_bsta511_code.qmd) | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day10_part1_bsta511_code.qmd) |
-|  | Hyp test steps: 4.3, 5.1 | [Day 10 Part 1: slides 14-25](../slides/Day10_part1_bsta511.qmd#/steps-in-a-hypothesis-test) | same | [{{< iconify streamline web size=20px >}}](../slides_md/Day10_part1_bsta511_md.qmd#steps-in-a-hypothesis-test) | same | [Day 10 Part 2](https://echo360.org/lesson/2ab2f4d3-9a1c-42ea-aee9-c19158171058/classroom#sortDirection=desc) | 36 min | same | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day10_part1_bsta511_code.qmd#steps-in-a-hypothesis-test) |
-|  | R demo | [Day 10 Part 1: slides 26-34](../slides/Day10_part1_bsta511.qmd#/running-a-t-test-in-r) | same | [{{< iconify streamline web size=20px >}}](../slides_md/Day10_part1_bsta511_md.qmd#running-a-t-test-in-r) | same | [Day 10 Part 3](https://echo360.org/lesson/249fd75c-de00-451a-89c6-aa7b72ec56ab/classroom#sortDirection=desc) | 25 min | same | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day10_part1_bsta511_code.qmd#running-a-t-test-in-r) |
-|  |  | [Day 10 Part 2](../slides/Day10_part2_bsta511.qmd) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](../slides_pdf/Day10_part2_bsta511.pdf) | [{{< iconify streamline web size=20px >}}](../slides_md/Day10_part2_bsta511_md.qmd) |  | No recording |  | [{{< iconify simple-icons:quarto >}}](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day10_part2_bsta511_code.qmd) | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day10_part2_bsta511_code.qmd) |
+| 11 | 2-sample means test: 5.3.2 | [Day 11: slides 1-17](../slides/Day11_bsta511.qmd) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](../slides_pdf/Day11_bsta511.pdf) | [{{< iconify streamline web size=20px >}}](../slides_md/Day11_bsta511_md.qmd) | [{{< iconify pepicons-pop pen-circle-filled size=20px >}}](../slides_notes/Day11_bsta511_2samp-t-test-notes.pdf) | [Day 11 Part 1](https://echo360.org/lesson/34c0539f-ea01-4566-9e0e-93ea72838f0c/classroom#sortDirection=desc) | 36 min | [{{< iconify simple-icons:quarto >}}](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day11_bsta511_code.qmd) | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day11_bsta511_code.qmd) |
+|  | 2-sample means CI; R; pooled SD: 5.3.1, 5.3.5 | [Day 11: slides 18-26](../slides/Day11_bsta511.qmd#/step-5-conclusion-to-hypothesis-test) | same | [{{< iconify streamline web size=20px >}}](../slides_md/Day11_bsta511_md.qmd#step-5-conclusion-to-hypothesis-test) | same | [Day 11 Part 2](https://echo360.org/lesson/9dec3c7e-f174-405b-a382-12a0f7858c0a/classroom#sortDirection=desc) | 26 min | same | same |
+|  | Power & sample size: 1 or 2 means: 5.4 & extra | [Day 11: slides 27-45](../slides/Day11_bsta511.qmd#/power-and-sample-size-calculations) | same | [{{< iconify streamline web size=20px >}}](../slides_md/Day11_bsta511_md.qmd#power-and-sample-size-calculations) | same | [Day 11 Part 3](https://echo360.org/lesson/0d8fbd2c-e88e-410d-ba61-175d4c7cc29b/classroom#sortDirection=desc) | 57 min | same | same |
+| 12 | 1 & 2 proportions test & CI: 8.1.1, 8.2 | [Day 12: slides 1-23](../slides/Day12_bsta511.qmd) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](../slides_pdf/Day12_bsta511.pdf) \* | [{{< iconify streamline web size=20px >}}](../slides_md/Day12_bsta511_md.qmd) | [{{< iconify pepicons-pop pen-circle-filled size=20px >}}](../slides_notes/Day12_bsta511_notes.pdf) \* | [Day 12 Part 1](https://echo360.org/lesson/3fc18233-3a69-419d-8b7d-879b6613c5ec/classroom#sortDirection=desc) | 48 min | [{{< iconify simple-icons:quarto >}}](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day12_bsta511_code.qmd) | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day12_bsta511_code.qmd) |
+|  | R: 1 & 2 proportions test & CI | [Day 12: slides 24-34](../slides/Day12_bsta511.qmd#/r-1--and-2-sample-proportions-tests) | same | [{{< iconify streamline web size=20px >}}](../slides_md/Day12_bsta511_md.qmd#r-1--and-2-sample-proportions-tests) | same | [Day 12 Part 2](https://echo360.org/lesson/6462b43c-c896-40b1-a32b-12fb2e24721e/classroom#sortDirection=desc) | 26 min | same | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day12_bsta511_code.qmd#r-1--and-2-sample-proportions-tests) |
+|  | Power for 1- and 2- proportions | [Day 12: slides 35-43](../slides/Day12_bsta511.qmd#/power-sample-size-for-testing-proportions) | same | [{{< iconify streamline web size=20px >}}](../slides_md/Day12_bsta511_md.qmd#power-sample-size-for-testing-proportions) | same | [Day 12 Part 3](https://echo360.org/lesson/7728cf56-e775-4e8a-b1f1-ddb30236c033/classroom#sortDirection=desc) | 25 min | same | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day12_bsta511_code.qmd#power-sample-size-for-testing-proportions) |
 
 : {.striped .hover tbl-colwidths="\[3, 10, 8, 5, 5, 5, 6, 6, 5, 5\]"}
+
+`*`*Note: page numbers in pdf files do not always align with those in the original html slides*
 
 ## Datasets
 
